# AsyncReview

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  deno.json  pyproject.toml  start.sh
cr/: __init__.py  cli.py  config.py  diff_rlm.py  diff_types.py  github.py  render.py  rlm_runner.py  server.py  snapshot.py  suggestions.py  types.py
cr/providers/: __init__.py  base.py  github.py  gitlab.py  registry.py
skills/asyncreview/: SKILL.md
tests/: test_diff_rlm.py  test_github.py  test_integration.py  test_providers.py  test_server.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  types.ts
web/src/components/: BugsPanel.tsx  ChatPanel.tsx  DiffViewer.test.tsx  DiffViewer.tsx  FlagsPanel.tsx  IssuePopover.tsx  PRSummary.tsx  PRSummarySkeleton.tsx
