[project]
name = "cr"
version = "0.1.0"
description = "Gemini RLM Codebase Review Tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Codebase Review Team" }
]
keywords = ["gemini", "llm", "code-review", "dspy", "rlm"]

dependencies = [
    "dspy>=3.1.2",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "sse-starlette>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
cr = "cr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cr"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

